[tool.poetry]
name = "recipe-bot"
version = "0.1.0"
description = ""
authors = ["maryia <masha.afanaseva.29@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
